[package]
name = "redis-graph"
version = "0.4.2"
authors = ["tompro <office@protom.eu>"]
keywords = ["redis", "database", "graph"]
description = "API for Redis graph database types."
homepage = "https://github.com/tompro/redis_graph"
repository = "https://github.com/tompro/redis_graph"
documentation = "https://docs.rs/redis_graph"
license = "BSD-3-Clause"
readme = "README.md"
edition = "2018"
exclude = ["docker"]

[dependencies]
redis = { version = "^0.22.1", optional = true }

[features]
default = ['redis']
tokio-comp = ['redis/tokio-comp']
async-std-comp = ['redis/async-std-comp']

[dev-dependencies]
tokio = { version = "1", features = ["rt"] }
futures = "0.3.5"
async-std = "1.8.0"

[[test]]
name = "test_async_std_commands"
required-features = ['async-std-comp']

[[test]]
name = "test_async_tokio_commands"
required-features = ['tokio-comp']

[package.metadata.docs.rs]
all-features = true
